--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
     </div>
     <script src="lib/jquery/jquery-3.2.1.min.js"></script>
     <script src="dist/sys.js"></script>
-  </body>
+  <script type="text/javascript" src="./dist/sys.js"></script></body>
 </html>
