--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>义乌街道</title>
     <link href="lib/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="sys/less/index.less" rel="stylesheet">
+
   </head>
   <body>
     <div class="g-index">
-        <div class="g-hd">aaa</div>
+        <div class="g-hd">bbb</div>
         <div class="g-bd">
+          <li>aaa</li>
+          <li>bbb</li>
         </div>
         <div class="g-ft">ccc</div>
     </div>
     <script src="lib/jquery/jquery-3.2.1.min.js"></script>
-    <script src="dist/sys.js"></script>
+    <!-- <script src="dist/sys.js"></script> -->
   </body>
 </html>
