自动公共包编译

--- a/src/main.html
+++ b/src/main.html
@@ -8,15 +8,8 @@
 
   </head>
   <body>
-    <div class="g-index">
-        <div class="g-hd">bbb</div>
-        <div class="g-bd">
-          <li>aaa</li>
-          <li>bbb</li>
-        </div>
-        <div class="g-ft">
-            <a href="#" class="btn btn-primary btn-sm">确定</a>
-        </div>
+    <div class="g-main">
+        main
     </div>
 
   </body>
